# logger_benchmarks

./: .gitignore  CMakeLists.txt  README.md  bench_results_0_bounded.txt  bench_results_0_unbounded.txt  bench_results_1.txt  bench_results_2.txt  bench_results_3.txt  bench_results_4.txt  bench_results_5.txt  bench_results_6.txt  generate_tables.py  results.txt  results_thread_affinity_set.txt  run_all.py  setup_boost_simple.py
benchmarks/: CMakeLists.txt  benchmark_platformlab_nanolog_call_site_latency.cpp  benchmark_quill_call_site_latency.cpp  benchmark_quill_spsc_queue.cpp  benchmark_spdlog_call_site_latency.cpp  call_site_latency_bench.h  call_site_latency_bench_common.h  call_site_latency_percentile_linux.cpp
benchmarks/backend_total_time/: CMakeLists.txt  boost_log_backend_total_time.cpp  bqlog_backend_total_time.cpp  bqlog_binary_backend_total_time.cpp  fmtlog_backend_total_time.cpp  iyengar_nanolog_backend_total_time.cpp  ms_binlog_backend_total_time.cpp  nanolog_backend_total_time.cpp  quill_backend_total_time.cpp  quill_with_functions_backend_total_time.cpp  reckless_backend_total_time.cpp  spdlog_backend_total_time.cpp  utils.h  xtr_backend_total_time.cpp
benchmarks/call_site_latency/: CMakeLists.txt  benchmark_boost_log_call_site_latency.cpp  benchmark_bqlog_call_site_latency.cpp  benchmark_fmtlog_call_site_latency.cpp  benchmark_g3log_call_site_latency.cpp  benchmark_iyengar_nanolog_call_site_latency.cpp  benchmark_ms_binlog_call_site_latency.cpp  benchmark_platformlab_nanolog_call_site_latency.cpp  benchmark_quill_call_site_latency.cpp  benchmark_quill_dual_mode_bounded_call_site_latency.cpp  benchmark_quill_dual_mode_unbounded_call_site_latency.cpp  benchmark_quill_no_dual_mode_unbounded_call_site_latency.cpp  benchmark_quill_unbounded_call_site_latency.cpp  benchmark_quill_v27x86_unbounded_call_site_latency.cpp  benchmark_quill_v2_unbounded_call_site_latency.cpp  benchmark_quill_with_functions_call_site_latency.cpp  benchmark_quillv3_unbounded_call_site_latency.cpp  benchmark_reckless_call_site_latency.cpp  benchmark_spdlog_call_site_latency.cpp  benchmark_xtr_call_site_latency.cpp  call_site_latency_bench.h  call_site_latency_bench_common.h
quill/: CMakeLists.txt
quill/include/quill/: TweakMe.h
quill/include/quill/detail/: BoundedSPSCQueue.h  SPSCQueue.h
quill/quill/: CMakeLists.txt
quill/quill/include/quill/: Frontend.h  LogMacros.h  Logger.h
quill/quill/include/quill/backend/: BackendWorker.h  PatternFormatter.h
quill/quill/include/quill/core/: BoundedSPSCQueue.h  Codec.h  LoggerBase.h  LoggerManager.h  MacroMetadata.h  SinkManager.h  ThreadContextManager.h  ThreadUtilities.h
quill/quill/include/quill/filters/: Filter.h
quill/quill/include/quill/sinks/: ConsoleSink.h  FileSink.h  JsonConsoleSink.h  JsonFileSink.h  NullSink.h  RotatingFileSink.h  Sink.h  StreamSink.h
quill/quill/include/quill/std/: Array.h  Deque.h  FilesystemPath.h  ForwardList.h  List.h  Map.h  Optional.h  Pair.h  Set.h  Tuple.h  UnorderedMap.h  Vector.h  (+1 more)
quill/quill/test/: CMakeLists.txt
quill/quill/test/integration_tests/: SinkFilterTest.cpp  WideStdTypesLoggingTest.cpp
quill/quill/test/unit_tests/: FileUtilitiesTest.cpp  RdtscClockTest.cpp
quill/src/detail/: BackendWorker.cpp
quill_dual_mode_bounded/quill/: CMakeLists.txt
quill_dual_mode_bounded/quill/include/quill/: TweakMe.h
quill_dual_mode_bounded/quill/test/: SerializeDeserializeTest.cpp
quill_dual_mode_unbounded/quill/: CMakeLists.txt
quill_dual_mode_unbounded/quill/include/quill/: TweakMe.h
quill_dual_mode_unbounded/quill/src/detail/: Deserialize.cpp
quill_dual_mode_unbounded/quill/test/: SerializeDeserializeTest.cpp
quill_no_dual_mode_unbounded/quill/: CMakeLists.txt
quill_no_dual_mode_unbounded/quill/include/quill/: TweakMe.h
quill_no_dual_mode_unbounded/quill/src/detail/: Deserialize.cpp
quill_no_dual_mode_unbounded/quill/test/: CMakeLists.txt
quill_v2/quill/: CMakeLists.txt
quill_v2/quill/include/quill/: Clock.h  Logger.h  MacroMetadata.h  PatternFormatter.h  Quill.h  QuillError.h  TransitEvent.h  TweakMe.h
quill_v2/quill/src/: PatternFormatter.cpp  Quill.cpp
quill_v2/quill/src/detail/: HandlerCollection.cpp  SignalHandler.cpp  ThreadContextCollection.cpp
quill_v2/quill/src/handlers/: ConsoleHandler.cpp  Handler.cpp  RotatingFileHandler.cpp  TimeRotatingFileHandler.cpp
quill_v2/quill/test/: LogTest.cpp  LoggerCollectionTest.cpp  LoggerTest.cpp  QuillLogTest.cpp  RdtscClockTest.cpp  ThreadContextCollectionTest.cpp  TransitEventBufferTest.cpp  TypeTraitsCopyableTest.cpp  UtilitiesTest.cpp
quill_v2/quill/test/misc/: DocTestExtensions.h  TestUtilities.cpp
quillv27/quill/: CMakeLists.txt
quillv27x86/: CMakeLists.txt
quillv27x86/quill/: CMakeLists.txt
quillv27x86/quill/include/quill/: TweakMe.h
quillv3/: CMakeLists.txt
quillv3/quillv3/: CMakeLists.txt
quillv3/quillv3/cmake/: CodeCoverage.cmake
quillv3/quillv3/include/quill/: LogLevel.h  Logger.h  MacroMetadata.h  PatternFormatter.h  Quill.h
quillv3/quillv3/src/: LogLevel.cpp  PatternFormatter.cpp  Quill.cpp
quillv3/quillv3/src/detail/: HandlerCollection.cpp  LoggerCollection.cpp  ThreadContext.cpp
quillv3/quillv3/src/handlers/: ConsoleHandler.cpp  FileHandler.cpp  Handler.cpp  JsonFileHandler.cpp  RotatingFileHandler.cpp  StreamHandler.cpp
quillv3/quillv3/test/: CMakeLists.txt  LogTest.cpp  MacroMetadataTest.cpp  QuillLogNoTransitBufferTest.cpp  QuillLogTest.cpp  QuillLogWakeUpBackendTest.cpp  QuillStructuredLogTest.cpp  RdtscClockTest.cpp  ThreadContextCollectionTest.cpp  TypeTraitsCopyableTest.cpp  UtilitiesTest.cpp
quillv3/quillv3/test/misc/: DocTestExtensions.cpp
results/int_int_double/: bench_results_0.txt  bench_results_1.txt  bench_results_2.txt  bench_results_3.txt  bench_results_4.txt  bench_results_5.txt  bench_results_6.txt  bench_results_7.txt  bench_results_8.txt
results/int_int_large_string/: bench_results_0.txt  bench_results_1.txt  bench_results_2.txt  bench_results_3.txt  bench_results_4.txt  bench_results_5.txt  bench_results_6.txt  bench_results_7.txt  bench_results_8.txt
(+82 files in other folders)
