add_executable(BENCHMARK_quill_backend_total_time quill_backend_total_time.cpp)
target_link_libraries(BENCHMARK_quill_backend_total_time quill)

add_executable(BENCHMARK_quill_with_functions_backend_total_time quill_with_functions_backend_total_time.cpp)
target_link_libraries(BENCHMARK_quill_with_functions_backend_total_time quill)

add_executable(BENCHMARK_fmtlog_backend_total_time fmtlog_backend_total_time.cpp)
target_link_libraries(BENCHMARK_fmtlog_backend_total_time fmtlog)

# This test is not relevant anymore, spdlog flush() is no longer sync in latest versions
#include_directories(${CMAKE_SOURCE_DIR}/third_party)
#add_executable(BENCHMARK_spdlog_backend_total_time spdlog_backend_total_time.cpp)
#target_link_libraries(BENCHMARK_spdlog_backend_total_time)

add_executable(BENCHMARK_xtr_backend_total_time xtr_backend_total_time.cpp)
#find_package(PkgConfig REQUIRED)
#pkg_check_modules(LIBURING REQUIRED liburing)
target_link_libraries(BENCHMARK_xtr_backend_total_time xtr Threads::Threads ${LIBURING_LIBRARIES})

add_executable(BENCHMARK_ms_binlog_backend_total_time ms_binlog_backend_total_time.cpp)
target_link_libraries(BENCHMARK_ms_binlog_backend_total_time binlog)

add_executable(BENCHMARK_reckless_backend_total_time reckless_backend_total_time.cpp)
target_link_libraries(BENCHMARK_reckless_backend_total_time reckless)

add_executable(BENCHMARK_iyengar_nanolog_backend_total_time iyengar_nanolog_backend_total_time.cpp)
target_link_libraries(BENCHMARK_iyengar_nanolog_backend_total_time IyengarNanoLog)

add_executable(BENCHMARK_nanolog_backend_total_time nanolog_backend_total_time.cpp)
target_link_libraries(BENCHMARK_nanolog_backend_total_time platformlab_nanolog)

add_executable(BENCHMARK_bqlog_backend_total_time bqlog_backend_total_time.cpp)
target_link_libraries(BENCHMARK_bqlog_backend_total_time bqlog)

add_executable(BENCHMARK_bqlog_binary_backend_total_time bqlog_binary_backend_total_time.cpp)
target_link_libraries(BENCHMARK_bqlog_binary_backend_total_time bqlog)